--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Contact</title>
 </head>
 <body>
-    <div class="navgtition">
     <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="menu.html">menu</a></li>
@@ -14,7 +13,5 @@
         <li><a href="contact.html">contact</a></li>
         
     </ul>
-</div>
-    <h1>Welcome To Our Restrant</h1>
 </body>
 </html>
