--- a/about.html
+++ b/about.html
@@ -9,9 +9,23 @@
     <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="menu.html">menu</a></li>
+        <li><a href="suggest.html">suddest an item</a></li>
         <li><a href="about.html">about</a></li>
+        <li><a href="login.html">login</a></li>
         <li><a href="contact.html">contact</a></li>
         
     </ul>
+    <div>
+    <h1>Our Goals As A Company</h1>
+    <h4>what are copines core vlaes</h4>
+</div>
+<div>
+    <h2>our core vlaes</h2>
+    <p></p>
+</div>
+    <div>
+    <h2>our Goals</h2>
+    <p>our main goal as a company is to bright our costmers day. after a long day the last thing a costumer would what to do is worry is what you have in the house and what to make with it. that where we come in. we have some of the best food to offer in this region/p>
+</div>
 </body>
 </html>
