--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <ul>
         <li><a href="index.html">home</a></li>
         <li><a href="menu.html">menu</a></li>
+        <li><a href="suggest.html">suddest an item</a></li>
         <li><a href="about.html">about</a></li>
+        <li><a href="login.html">login</a></li>
         <li><a href="contact.html">contact</a></li>
         
     </ul>
 </div>
-    <h1>Welcome To Our Restrant</h1>
+    <h1>Welcome To Our Shop</h1>
+    <h3>we glade you chose us</h3>
 </body>
 </html>
