--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
+    <title>login</title>
 </head>
 <body>
     <ul>
@@ -14,6 +14,6 @@
         <li><a href="login.html">login</a></li>
         <li><a href="contact.html">contact</a></li>
         
-    </ul>
+    </ul>   
 </body>
 </html>
