add all js pages

--- a/about.html
+++ b/about.html
@@ -21,11 +21,16 @@
 </div>
 <div>
     <h2>our core vlaes</h2>
-    <p></p>
+    <p> some of our core vlaes as a company are <br>falmly vlaes <br> we also belive in honst we will be honest with our costmers <br></p>
 </div>
     <div>
     <h2>our Goals</h2>
-    <p>our main goal as a company is to bright our costmers day. after a long day the last thing a costumer would what to do is worry is what you have in the house and what to make with it. that where we come in. we have some of the best food to offer in this region/p>
+    <p>our main goal as a company is to bright our costmers day. after a long day the last thing a costumer would what to do is worry is what you have in the house and what to make with it. that where we come in. we have some of the best food to offer in this region</p>
+
+
+
+
+    <script src="about.js"></script>
 </div>
 </body>
 </html>
