--- a/menu.html
+++ b/menu.html
@@ -15,5 +15,22 @@
         <li><a href="contact.html">contact</a></li>
         
     </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="meni.js"></script>
 </body>
 </html>
