--- a/suggest.html
+++ b/suggest.html
@@ -15,5 +15,10 @@
         <li><a href="contact.html">contact</a></li>
         
     </ul>
+
+
+
+
+    <script src="suggest.js"></script>
 </body>
 </html>
