--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="navgtition">
@@ -17,7 +18,18 @@
         
     </ul>
 </div>
+<header class="intro">
     <h1>Welcome To Our Shop</h1>
     <h3>we glade you chose us</h3>
+</header>
+
+<footer class="media">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+</footer>
+
+    <script src="homepage.js"></script>
 </body>
 </html>
