--- a/login.html
+++ b/login.html
@@ -15,5 +15,7 @@
         <li><a href="contact.html">contact</a></li>
         
     </ul>   
+
+    <script src="login.js"></script>
 </body>
 </html>
