put in more html layout

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <li><a href="index.html">home</a></li>
         <li><a href="menu.html">menu</a></li>
         <li><a href="suggest.html">suddest an item</a></li>
-        <li><a href="about.html">about</a></li>
         <li><a href="login.html">login</a></li>
-        <li><a href="contact.html">contact</a></li>
         
     </ul>
 </div>
@@ -24,10 +22,20 @@
 </header>
 
 <footer class="media">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
+<a href="https://www.youtube.com/@thm290"></a>
+<a href=""></a>
+<a href=""></a>
+<a href=""></a>
+<ul class="list ">
+    <li><a href="about.html ">About Us</a>
+    </li>
+    <li><a href="contact.html ">Contact Us</a>
+    </li>
+    <li><a href="# ">Privacy Policy</a>
+    </li>
+    <li><a href="# ">Terms & Conditions</a>
+    </li>
+</ul>
 </footer>
 
     <script src="homepage.js"></script>
