--- a/about.html
+++ b/about.html
@@ -10,9 +10,8 @@
         <li><a href="index.html">home</a></li>
         <li><a href="menu.html">menu</a></li>
         <li><a href="suggest.html">suddest an item</a></li>
-        <li><a href="about.html">about</a></li>
         <li><a href="login.html">login</a></li>
-        <li><a href="contact.html">contact</a></li>
+        
         
     </ul>
     <div>
@@ -30,6 +29,23 @@
 
 
 
+
+    <footer class="media">
+        <a href="https://www.youtube.com/@thm290"></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <ul class="list ">
+            <li><a href="about.html ">About Us</a>
+            </li>
+            <li><a href="contact.html ">Contact Us</a>
+            </li>
+            <li><a href="# ">Privacy Policy</a>
+            </li>
+            <li><a href="# ">Terms & Conditions</a>
+            </li>
+        </ul>
+        </footer>
     <script src="about.js"></script>
 </div>
 </body>
