--- a/suggest.html
+++ b/suggest.html
@@ -17,7 +17,22 @@
     </ul>
 
 
-
+    <footer class="media">
+        <a href="https://www.youtube.com/@thm290"></a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        <ul class="list ">
+            <li><a href="about.html ">About Us</a>
+            </li>
+            <li><a href="contact.html ">Contact Us</a>
+            </li>
+            <li><a href="# ">Privacy Policy</a>
+            </li>
+            <li><a href="# ">Terms & Conditions</a>
+            </li>
+        </ul>
+        </footer>
 
     <script src="suggest.js"></script>
 </body>
