cange small thing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="menu.html">menu</a></li>
         <li><a href="suggest.html">suddest an item</a></li>
         <li><a href="login.html">login</a></li>
-        
+        <link rel="stylesheet" href="index.css">
     </ul>
 </div>
 <header class="intro">
