add new taremsscondition page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </li>
     <li><a href="# ">Privacy Policy</a>
     </li>
-    <li><a href="# ">Terms & Conditions</a>
+    <li><a href="treamscondtion.html">Terms & Conditions</a>
     </li>
 </ul>
 </footer>
