--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             </li>
             <li><a href="# ">Privacy Policy</a>
             </li>
-            <li><a href="# ">Terms & Conditions</a>
+            <li><a href="treamscondtion.html">Terms & Conditions</a>
             </li>
         </ul>
         </footer>
