--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
             </li>
             <li><a href="# ">Privacy Policy</a>
             </li>
-            <li><a href="# ">Terms & Conditions</a>
+            <li><a href="treamscondtion.html">Terms & Conditions</a>
             </li>
         </ul>
         </footer>
