--- a/suggest.html
+++ b/suggest.html
@@ -29,7 +29,7 @@
             </li>
             <li><a href="# ">Privacy Policy</a>
             </li>
-            <li><a href="# ">Terms & Conditions</a>
+            <li><a href="treamscondtion.html">Terms & Conditions</a>
             </li>
         </ul>
         </footer>
