--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="index.css">
+    
+        <link rel="stylesheet" href="idex2.css">
 </head>
 <body>
     <div class="navgtition">
@@ -13,19 +15,20 @@
         <li><a href="menu.html">menu</a></li>
         <li><a href="suggest.html">suddest an item</a></li>
         <li><a href="login.html">login</a></li>
-        <link rel="stylesheet" href="index.css">
     </ul>
 </div>
-<header class="intro">
+<div class="intro">
     <h1>Welcome To Our Shop</h1>
     <h3>we glade you chose us</h3>
-</header>
+</div>
 
-<footer class="media">
+<section class="footer">
+    <div class="mieda">
 <a href="https://www.youtube.com/@thm290"></a>
 <a href=""></a>
 <a href=""></a>
 <a href=""></a>
+</div>
 <ul class="list ">
     <li><a href="about.html ">About Us</a>
     </li>
@@ -36,7 +39,7 @@
     <li><a href="treamscondtion.html">Terms & Conditions</a>
     </li>
 </ul>
-</footer>
+</section>
 
     <script src="homepage.js"></script>
 </body>
