--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <ul>
@@ -24,7 +26,7 @@
 </div>
     <div>
     <h2>our Goals</h2>
-    <p>our main goal as a company is to bright our costmers day. after a long day the last thing a costumer would what to do is worry is what you have in the house and what to make with it. that where we come in. we have some of the best food to offer in this region</p>
+    <p>our main goal as a company is to bright our costmers day. after a long day work and being miserbal and you whant a nice snack that where we come on. it my comapny sole goal to prvied you with cofmting baked goods that warm up your day and make you smile. the kind of food you would rember your granmal making.</p>
 
 
 
