put in menu itemes

--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="menu.css">
 </head>
 <body>
     <ul>
@@ -18,9 +20,190 @@
 
 
 
+<h1>Menu items</h1>
+<h4>pick out and enjoy some our finest products.</h4>
 
 
 
+
+
+
+
+
+
+<section class="container content-section">
+    <h2 class="section-header">FOOD</h2>
+    <div class="shop-items">
+        <div class="shop-item">
+            <span class="shop-item-title">a dozen chcolet chip cookie</span>
+            <img class="shop-item-image" src="BAKERY-STYLE-CHOCOLATE-CHIP-COOKIES-9-637x637-1-500x500.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$12.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Cherry-Pie</span>
+            <img class="shop-item-image" src="Cherry-Pie.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$22.99</span>
+                <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">chocolate cake</span>
+            <img class="shop-item-image" src="chocolate-cake.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$30.00</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">ciabatta</span>
+            <img class="shop-item-image" src="ciabatta-25-1200.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$10.00</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Apple Pie</span>
+            <img class="shop-item-image" src="Classic-Apple-Pie.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$20.00</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Coffee Cake</span>
+            <img class="shop-item-image" src="coffee-cake.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$24.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Croissant</span>
+            <img class="shop-item-image" src="croissant.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$12.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Dinner Rolls</span>
+            <img class="shop-item-image" src="dinner-rolls.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$5.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">A Dozoun Gingerbread cookies</span>
+            <img class="shop-item-image" src="gingerbread-cookies.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$9.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">keylime pie</span>
+            <img class="shop-item-image" src="keylime-pie.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$23.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">lemon meringue pie</span>
+            <img class="shop-item-image" src="Lemon-Meringue-Pie-Featured.png">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$19.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">lemon pound cake</span>
+            <img class="shop-item-image" src="lemon-pound-cake.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$27.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">dozen Lemon sugar Cookies</span>
+            <img class="shop-item-image" src="Lemon-Sugar-Cookies-3.25.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$19.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">20 Macarons</span>
+            <img class="shop-item-image" src="Macarons.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$35.00</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Dozen Oatmeal Cookies</span>
+            <img class="shop-item-image" src="Oatmeal-Cookies.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$29.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Pumpkin Pie</span>
+            <img class="shop-item-image" src="old-fashioned-pumpkin-pie-1200x1200-1.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$30.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Pecan Pie</span>
+            <img class="shop-item-image" src="pecan-pie.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$19.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">rosemary</span>
+            <img class="shop-item-image" src="rosemaryfocacciawhole_alexandraskitchen.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$19.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">Dozen Snickerdoodle</span>
+            <img class="shop-item-image" src="Snickerdoodle.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$8.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">soft soft-pretzel</span>
+            <img class="shop-item-image" src="soft-pretzels.png">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$6.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+        <div class="shop-item">
+            <span class="shop-item-title">sourdough bread</span>
+            <img class="shop-item-image" src="sourdough-for-beginners-25-scaled.jpg">
+            <div class="shop-item-details">
+                <span class="shop-item-price">$14.99</span>
+                <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
