finsed all html and js will talk more css later eraly tomrwo

--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,16 @@
     <title>Contact</title>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="menu.html">menu</a></li>
-        <li><a href="about.html">about</a></li>
-        <li><a href="contact.html">contact</a></li>
-        
-    </ul>
+    <header class="">
+        <div class="">
+            <ul>
+                <li><a href="index.html">home</a></li>
+                <li><a href="menu.html">menu</a></li>
+                <li><a href="shinghup.html">sing up</a></li>
+                <li><a href="stafflogin.html">staff page</a></li>
+            </ul>
+            
+        </div>  
+    </header>
 </body>
 </html>
