--- a/index.html
+++ b/index.html
@@ -7,39 +7,39 @@
     <link rel="stylesheet" href="index.css">
     
         <link rel="stylesheet" href="idex2.css">
+        <style>*{background-color: gray;}</style>
 </head>
 <body>
-    <div class="navgtition">
-    <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="menu.html">menu</a></li>
-        <li><a href="suggest.html">suddest an item</a></li>
-        <li><a href="login.html">login</a></li>
-    </ul>
-</div>
+    <nav class="navbar navbar-expand-lg fixed-top navbarScroll ">
+        <div class="container ">
+            <h3>butter my muffins bakery</h3> 
+            <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarScroll " aria-controls="navbarScroll " aria-expanded="true " aria-label="Toggle navigation ">
+                <span class="navbar-toggler-icon "><i class="fas fa-bars "></i></span>
+            </button>
+            <div  id="navbar-content ">
+                <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll " style="--bs-scroll-height: 100px; ">
+                    <li class="nav-item ">
+                        <a class="nav-link " href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="menu.html ">Menu</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="shinghup.html">shingh up</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="stafflogin.html">Staff login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 <div class="intro">
     <h1>Welcome To Our Shop</h1>
     <h3>we glade you chose us</h3>
 </div>
 
-<section class="footer">
-    <div class="mieda">
-<a href="https://www.youtube.com/@thm290"></a>
-<a href=""></a>
-<a href=""></a>
-<a href=""></a>
-</div>
-<ul class="list ">
-    <li><a href="about.html ">About Us</a>
-    </li>
-    <li><a href="contact.html ">Contact Us</a>
-    </li>
-    <li><a href="# ">Privacy Policy</a>
-    </li>
-    <li><a href="treamscondtion.html">Terms & Conditions</a>
-    </li>
-</ul>
-</section>
+
 
 
 
