--- a/payment.html
+++ b/payment.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="backgroundimg8" id="home ">
+    <section  id="home ">
         <div class=container1>
             <div class=contained-1>
                 <h3>Will this order be pay with <button class="hero_button " onclick="openForm1()">Cash</button> or <button class="hero_button " onclick="openForm2()">Card</button>
