--- a/shinghup.html
+++ b/shinghup.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="idex2.css">
     <link rel="stylesheet" href="login.css">
     <title>sign up</title>
+    <style>*{background-color: gray;}</style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll ">
         <div class="container ">
-            <h3>butter my muffins bakery</h3> 
+            
                 <span class="navbar-toggler-icon "><i class="fas fa-bars "></i></span>
             </button>
             <div  id="navbar-content ">
@@ -46,22 +47,7 @@
             </div>
     </section>
 
-    <footer class="media">
-        <a href="https://www.youtube.com/@thm290"></a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
-        <ul class="list ">
-            <li><a href="about.html ">About Us</a>
-            </li>
-            <li><a href="contact.html ">Contact Us</a>
-            </li>
-            <li><a href="# ">Privacy Policy</a>
-            </li>
-            <li><a href="treamscondtion.html">Terms & Conditions</a>
-            </li>
-        </ul>
-        </footer> 
+    
         <script src="login.js"></script>
 </body>
 </html>
