--- a/edit.html
+++ b/edit.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="idex2.css">
     <title>Edit-Menu</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll ">
         <div class="container ">
-            <h3>butter my muffins bakery</h3> 
+            
             
                 <span class="navbar-toggler-icon "><i class="fas fa-bars "></i></span>
             </button>
