--- a/login.html
+++ b/login.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="idex2.css">
     <title>login</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg fixed-top navbarScroll ">
         <div class="container ">
-            <h3>butter my muffins bakery</h3> 
+            
             <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarScroll " aria-controls="navbarScroll " aria-expanded="true " aria-label="Toggle navigation ">
                 <span class="navbar-toggler-icon "><i class="fas fa-bars "></i></span>
             </button>
